Better Language adherence

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Copy this file to .env and add your actual API keys
 ANTHROPIC_API_KEY=sk_ant_your_key_here
 OPENAI_API_KEY=sk-your_key_here  # For embeddings
+DEFAULT_LANGUAGE=english  # Default language for story generation (supported: english, spanish, french, german, italian, portuguese, russian, japanese, chinese, korean, arabic, hindi)
