Multiple LLMs supported

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 # Copy this file to .env and add your actual API keys
-ANTHROPIC_API_KEY=sk_ant_your_key_here
-OPENAI_API_KEY=sk-your_key_here  # For embeddings
-DEFAULT_LANGUAGE=english  # Default language for story generation (supported: english, spanish, french, german, italian, portuguese, russian, japanese, chinese, korean, arabic, hindi)
+ANTHROPIC_API_KEY=sk_ant_your_key_here  # Required for Anthropic Claude models
+OPENAI_API_KEY=sk-your_key_here  # Required for OpenAI GPT models
+GEMINI_API_KEY=your_key_here  # Required for Google Gemini models
+
+# Default model provider (openai, anthropic, or gemini)
+DEFAULT_MODEL_PROVIDER=gemini
+
+# Default language for story generation
+DEFAULT_LANGUAGE=english  # Supported: english, spanish, french, german, italian, portuguese, russian, japanese, chinese, korean, arabic, hindi
