--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ langmem
 langchain-anthropic
 langchain-core
 langchain-google-genai
+langchain-openai
 openai
 python-dotenv
-langgraph-checkpoint-postgres
 psutil
