--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ openai = ">=1.86.0"
 python-dotenv = ">=1.1.0"
 psutil = ">=7.0.0"
 langchain-community = "^0.3.25"
+jinja2 = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
