--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,12 @@ GEMINI_API_KEY=your_key_here  # Required for Google Gemini models
 # Default model provider (openai, anthropic, or gemini)
 DEFAULT_MODEL_PROVIDER=gemini
 
+# Default model to use (optional - uses provider's default if not specified)
+# Examples:
+# For OpenAI: gpt-4-turbo-preview, gpt-4, gpt-3.5-turbo
+# For Anthropic: claude-3-opus-20240229, claude-3-sonnet-20240229, claude-3-haiku-20240307
+# For Gemini: gemini-2.0-flash-thinking-exp-1219, gemini-pro, gemini-1.5-pro
+DEFAULT_MODEL=
+
 # Default language for story generation
 DEFAULT_LANGUAGE=english  # Supported: english, spanish, french, german, italian, portuguese, russian, japanese, chinese, korean, arabic, hindi
