--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,18 @@
 # Copy this file to .env and add your actual API keys
-ANTHROPIC_API_KEY=sk_ant_your_key_here  # Required for Anthropic Claude models
-OPENAI_API_KEY=sk-your_key_here  # Required for OpenAI GPT models
-GEMINI_API_KEY=your_key_here  # Required for Google Gemini models
+ANTHROPIC_API_KEY=your-anthropic-api-key-here  # Required for Anthropic Claude models
+OPENAI_API_KEY=your-openai-api-key-here  # Required for OpenAI GPT models
+GEMINI_API_KEY=your-gemini-api-key-here  # Required for Google Gemini models
 
 # Default model provider (openai, anthropic, or gemini)
-DEFAULT_MODEL_PROVIDER=gemini
+DEFAULT_MODEL_PROVIDER=openai
 
 # Default model to use (optional - uses provider's default if not specified)
 # Examples:
 # For OpenAI: gpt-4-turbo-preview, gpt-4, gpt-3.5-turbo
 # For Anthropic: claude-3-opus-20240229, claude-3-sonnet-20240229, claude-3-haiku-20240307
 # For Gemini: gemini-2.0-flash-thinking-exp-1219, gemini-pro, gemini-1.5-pro
-DEFAULT_MODEL=
+# DEFAULT_MODEL=
 
 # Default language for story generation
 DEFAULT_LANGUAGE=english  # Supported: english, spanish, french, german, italian, portuguese, russian, japanese, chinese, korean, arabic, hindi
+ENDOFFILE < /dev/null
