Add audiobook generation with Azure TTS support
- Implement SSML-based audiobook generation using Azure Speech Service
- Add book and chapter title announcements to audio narration
- Fix prosody rate syntax (percentage values are relative, not absolute)
- Update SSML templates with correct prosody syntax and examples
- Add support for additional SSML tags (say-as, sub, lang, p, s)
- Organize audio files by story title with format: XX-YY-chapter_title.mp3
- Add comprehensive audiobook documentation to README
- Include test mode for generating single scene audio
- Support multiple voices for different languages

--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,7 @@ DEFAULT_MODEL_PROVIDER=openai
 
 # Default language for story generation
 DEFAULT_LANGUAGE=english  # Supported: english, spanish, french, german, italian, portuguese, russian, japanese, chinese, korean, arabic, hindi
-ENDOFFILE < /dev/null
+
+# Azure Speech Service credentials (required for audiobook generation)
+SPEECH_KEY=your-azure-speech-key-here  # Required for text-to-speech conversion
+SPEECH_REGION=your-azure-region-here  # e.g., eastus, westeurope, etc.
