--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ psutil = ">=7.0.0"
 langchain-community = "^0.3.25"
 jinja2 = "^3.1.2"
 urllib3 = "^2.5.0"
+azure-cognitiveservices-speech = "1.44.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
