Add research-driven world building capability
Implemented an alternative world building approach that uses web research
to create more authentic and grounded fictional worlds.

Key features:
- WorldBuildingResearchConfig for configuration
- WorldBuildingResearcher orchestrates the research process
- Category-specific research strategies for each world element
- Integration with Tavily, ArXiv, and PubMed search APIs
- Parallel research execution for performance
- Citation tracking for transparency
- Caching to avoid redundant searches

The system maintains backward compatibility - research is only used when
explicitly enabled in configuration:
  world_building_research:
    enable_research: true
    search_apis: [tavily]
    research_depth: medium

Added TAVILY_API_KEY to .env.example for easy setup.

This enhancement is particularly valuable for:
- Historical fiction requiring period accuracy
- Stories set in specific cultural contexts
- Technical or scientific narratives
- Any story benefiting from real-world grounding

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,5 @@ DEFAULT_LANGUAGE=english  # Supported: english, spanish, french, german, italian
 # Azure Speech Service credentials (required for audiobook generation)
 SPEECH_KEY=your-azure-speech-key-here  # Required for text-to-speech conversion
 SPEECH_REGION=your-azure-region-here  # e.g., eastus, westeurope, etc.
+
+TAVILY_API_KEY=tvly-your-tavily-key-here 
