Clean up command line flags and move configs to environment variables
Removed deprecated flags:
- Removed --use-v1 flag and legacy v1 workflow code (no longer exists)

Moved technical configurations to .env:
- --cache → CACHE_TYPE (default: sqlite)
- --cache-path → CACHE_PATH (default: ~/.storyteller/cache/llm_cache.db)
- --recursion-limit → LANGGRAPH_RECURSION_LIMIT (default: 200)
- --database-path → STORY_DATABASE_PATH (default: ~/.storyteller/story_database.db)

These settings are better suited as environment variables since they are:
- Technical configuration rather than story parameters
- Rarely changed between runs
- Often deployment-specific

Updated .env.example with clear documentation for all new settings.

This simplifies the command line interface to focus on story-related options.

--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,17 @@ DEFAULT_LANGUAGE=english  # Supported: english, spanish, french, german, italian
 SPEECH_KEY=your-azure-speech-key-here  # Required for text-to-speech conversion
 SPEECH_REGION=your-azure-region-here  # e.g., eastus, westeurope, etc.
 
-TAVILY_API_KEY=tvly-your-tavily-key-here 
+# Research API key (required for --research-worldbuilding)
+TAVILY_API_KEY=tvly-your-tavily-key-here
+
+# Advanced Configuration (optional)
+
+# LLM Cache Configuration
+CACHE_TYPE=sqlite  # Options: sqlite, memory, none (default: sqlite)
+CACHE_PATH=~/.storyteller/cache/llm_cache.db  # Path for sqlite cache (default: ~/.storyteller/cache/llm_cache.db)
+
+# Database Configuration  
+STORY_DATABASE_PATH=~/.storyteller/story_database.db  # Path to story database (default: ~/.storyteller/story_database.db)
+
+# LangGraph Configuration
+LANGGRAPH_RECURSION_LIMIT=200  # Maximum recursion depth for story generation (default: 200) 
