Implement persistent caching for Tavily API calls
Added comprehensive caching system to reduce API costs and improve performance:

1. Created TavilyCache class with SQLite backend:
   - Separate caches for search and extract API calls
   - Configurable TTL with automatic cleanup of old entries
   - Cache statistics and management methods

2. Integrated caching into search_utils.py:
   - Check cache before making API calls
   - Cache successful responses
   - Support for enabling/disabling cache via parameter

3. Configuration through environment variables:
   - TAVILY_CACHE_ENABLED: Enable/disable caching (default: true)
   - TAVILY_CACHE_TTL_DAYS: Cache entry lifetime (default: 30 days)
   - TAVILY_CACHE_PATH: Custom cache location

4. Benefits:
   - Avoid duplicate API calls for same queries
   - Significantly faster research for similar concepts
   - Deterministic results for testing
   - Reduced API costs

The cache uses content-based keys, so identical queries will return
cached results regardless of when they were made, improving both
development iteration speed and production efficiency.

Co-Authored-By: Human <human@anthropic.com>

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,11 @@ SPEECH_REGION=your-azure-region-here  # e.g., eastus, westeurope, etc.
 # Research API key (required for --research-worldbuilding)
 TAVILY_API_KEY=tvly-your-tavily-key-here
 
+# Tavily Cache Configuration (for research worldbuilding)
+TAVILY_CACHE_ENABLED=true  # Enable caching of Tavily API calls (default: true)
+TAVILY_CACHE_TTL_DAYS=30  # How long to keep cached results in days (default: 30)
+TAVILY_CACHE_PATH=~/.storyteller/cache/tavily_cache.db  # Path for Tavily cache (default: ~/.storyteller/cache/tavily_cache.db)
+
 # Advanced Configuration (optional)
 
 # LLM Cache Configuration
