--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ tavily-python = "^0.5.0"
 jinja2 = "^3.1.2"
 urllib3 = "^2.5.0"
 azure-cognitiveservices-speech = "1.44.0"
+langsmith-mcp-server = "^0.0.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
