--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ black = "^24.0.0"
 ruff = "^0.5.0"
 mypy = "^1.10.0"
 pre-commit = "^3.7.0"
+vulture = "^2.11"
 
 [tool.poetry.scripts]
 storyteller = "run_storyteller:main"
