--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,15 @@ ehthumbs_vista.db
 .directory
 .Trash-*
 .nfs*
+
+# Generated story artifacts
+current_scenes.txt
+scenes_content.txt
+story_outline.txt
+Der_Dissonante_Choral_*.md
+Der_dissonante_Choral_*.md
+Adventurous_Fantasy_Story*.md
+Subtiler_Humor_Krimi_Story*.md
+*_info.md
+header.tex
+logfile
